--- a/<joannam1>_git/index.html
+++ b/<joannam1>_git/index.html
@@ -66,7 +66,7 @@
         <h2 class="mb-5">Favorite Quotes</h2>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-        <div class="subheading mb-3">Things don't always work out the first time, but keep trying</div>
+        <div class="subheading mb-3">I changed this quote!!!</div>
         </div>
 
       </div>
